--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+#DataBase Connection MySql
+spring.datasource.platform=mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/italianRestaurant?user=root&password=&serverTimezone=UTC
+
+
+spring.jpa.database=mysql
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=create
