--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,14 @@ spring.datasource.url=jdbc:mysql://localhost:3306/italianRestaurant?user=root&pa
 
 spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.generate-ddl=true
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+server.error.whitelabel.enabled=false
+
+spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create
+spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=create.sql
+spring.jpa.properties.javax.persistence.schema-generation.scripts.create-source=metadata
