--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 
 #DataBase Connection MySql
 spring.datasource.platform=mysql
-<<<<<<< HEAD
+
 spring.datasource.url=jdbc:mysql://localhost:3306/italianrestaurant?serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
-=======
-spring.datasource.url=jdbc:mysql://localhost:3306/italianrestaurant?user=root&password=&serverTimezone=UTC
->>>>>>> 01d679548fdd2f63b08f2d36c86d26543d72411d
+
+//spring.datasource.url=jdbc:mysql://localhost:3306/italianrestaurant?user=root&password=&serverTimezone=UTC
+
 
 
 spring.jpa.database=mysql
